# eureka

./: .cproject  .gitignore  .project  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  configure.ac
data/: COPYRIGHT  Demoworld.xml  Makefile  Makefile.am  Makefile.in  Mittelerde.xml  charset.png.old
data/Demoworld/: Makefile.am  game_won.lua
data/Demoworld/armour/: Makefile.am  chainmail.lua  defs.lua  hornedhelmet.lua  leatherarmour.lua  leatherhelmet.lua  metalhelmet.lua  platemail.lua  smallmetalhelmet.lua
data/Demoworld/bestiary/: Makefile.am  balron.lua  beholder.lua  bluebalron.lua  defs.lua  demon.lua  dragon.lua  ettin.lua  evilwizard.lua  knight.lua  orc.lua  skeleton.lua  skeleton_lord.lua  spider.lua  troll.lua  wolf.lua
data/Demoworld/bestiary/attacks/: Makefile.am  fleeing.lua  odem.lua  with_weapon.lua  without_weapon.lua
data/Demoworld/bestiary/spells/: Makefile.am  fireball.lua  heal.lua  stare.lua  thunderbolt.lua
data/Demoworld/doc/: Makefile.am  rules.md
data/Demoworld/edibles/: Makefile.am  anthurium.lua  arnica.lua  beer.lua  bellisperennis.lua  chamomilla.lua  defs.lua  garlic.lua  gelsemium.lua  iration.lua  magic_mushroom.lua  morbilinium.lua  nightshade.lua  rosaceae.lua  scleranthus.lua  sration.lua  sulphur.lua  sunflower.lua  thuja.lua  wine.lua
data/Demoworld/images/: Makefile.am
data/Demoworld/maps/: Makefile.am  dungeon.xml  hut.xml  landscape.xml  lendom.xml  sarsen.xml  tunnel.xml  velnebras.xml
data/Demoworld/miscitems/: Makefile.am  arrow.lua  bolt.lua  defs.lua  goldcoin.lua  key.lua  nonmagicscroll.lua
data/Demoworld/people/: Makefile.am  dungeon_evelyn.lua  dungeon_franz.lua  dungeon_samuel.lua  generic_fight.lua  hut_dog.lua  lendom_bartender.lua  lendom_blacksmith.lua  lendom_dog.lua  lendom_druid.lua  lendom_jester.lua  lendom_jimmy.lua  lendom_magician.lua  lendom_mayor.lua  lendom_priest.lua  lendom_ranger.lua  lendom_ranger2.lua  lendom_worker.lua  sarsen_ignaz.lua  sarsen_inge.lua  test_scripts.sh  velnebras_food.lua  velnebras_guard.lua  velnebras_herbs.lua  velnebras_jester.lua  velnebras_mage.lua  velnebras_mage2.lua
data/Demoworld/potions/: Makefile.am  defs.lua  heal.lua  healpoisonpoition.lua  improvemagic.lua  invincibility.lua
data/Demoworld/services/: Makefile.am  defs.lua  heal.lua  heal_lightwounds.lua  heal_poison.lua  levelup.lua  resurrect.lua
data/Demoworld/shields/: Makefile.am  bigmetalshield.lua  bigwoodenshield.lua  defs.lua  small_shield.lua
data/Demoworld/sound/: Makefile.am
data/Demoworld/spells/: Makefile.am
data/Demoworld/spells/mage/: Makefile.am  fireball.lua  heal.lua  heal_poison.lua  light.lua  light_strong.lua  magic_arrow.lua  waterwalk.lua
data/Demoworld/weapons/: Makefile.am  axe.lua  blue_magic_broadsword.lua  blue_magic_sword.lua  bow.lua  broadsword.lua  crossbow.lua  dagger.lua  defs.lua  doublesidedaxe.lua  helbeard.lua  mace.lua  magic_broadsword_blue.lua  magic_fire_sword.lua  magic_sword_blue.lua  magic_sword_fire.lua  morning_star.lua  pick.lua  shovel.lua  sling.lua  spear.lua  sword.lua  torch.lua
data/Mittelerde/: Makefile  Makefile.am  Makefile.in  elements.xml
data/Mittelerde/bestiary/: Makefile  Makefile.am  Makefile.in  defs.lua  orc.lua  troll.lua  troll.lua.old
data/Mittelerde/edibles/: Makefile.am  beer.lua  defs.lua  iration.lua  magic_mushroom.lua  sration.lua  wine.lua
data/Mittelerde/images/: COPYRIGHT  Makefile  Makefile.am  Makefile.in  icons_indoors.xcf
data/Mittelerde/maps/: Dungeon1.xml  Landschaft.xml  Makefile  Makefile.am  Makefile.in  Mitwok.xml  Rothenburg.xml  Rothenburg_downstairs.xml  Rothenburg_roof.xml  Rothenburg_upstairs.xml  Stadtkarte1.xml  test.lua
data/Mittelerde/people/: Makefile  Makefile.am  Makefile.in  blacksmith.lua  boy_stadtkarte.lua  foodmerchant.lua  generic_fight.lua  guard.lua  rothenburg_bardpub.lua  rothenburg_bartender.lua  rothenburg_blacksmith.lua  rothenburg_frederik.lua  rothenburg_governour.lua  rothenburg_healer.lua  rothenburg_jester_upstairs.lua  rothenburg_jesterentrance.lua  rothenburg_johanna.lua  rothenburg_john.lua  rothenburg_lea.lua  rothenburg_librarian.lua  rothenburg_monk.lua  rothenburg_offdutyguard.lua  rothenburg_rangerpub.lua  rothenburg_taxer.lua  stadtkarte_monk.lua
data/Mittelerde/services/: Makefile.am  defs.lua  heal.lua  heal_lightwounds.lua  levelup.lua  resurrect.lua
data/Mittelerde/shields/: Makefile  Makefile.am  Makefile.in  defs.lua  small_shield.lua
data/Mittelerde/sound/: COPYRIGHT  Makefile  Makefile.am  Makefile.in
data/Mittelerde/spells/: Makefile.am
data/Mittelerde/spells/mage/: Makefile.am  heal.lua  light.lua  magic_arrow.lua
data/Mittelerde/weapons/: Makefile  Makefile.am  Makefile.in  axe.lua  defs.lua  sword.lua  torch.lua
data/leibniz/: Makefile  Makefile.am  Makefile.in
design/: DEVNOTES  music-ideas.txt  rules.txt
extras/: a.out  mapconv.cc  wholeworld3.xpm
m4/: Makefile  Makefile.am  Makefile.in  sdl.m4
src/: .cproject  Doxyfile.in  Makefile  Makefile.am  Makefile.in  action.cc  action.hh  actiononenter.cc  actiononenter.hh  actionopened.cc  actionopened.hh  actionpullpush.cc  actionpullpush.hh  actiontake.cc  actiontake.hh  actonlook.cc  actonlook.hh  arena.cc  arena.hh  armour.cc  armour.hh  armourhelper.cc  armourhelper.hh  attackers.cc  attackers.hh  attackoption.cc  attackoption.hh  charset.cc  charset.hh  clock.cc  clock.hh  combat.cc  combat.hh  config.h  config.h.in  console.cc  console.hh  conversation.cc  conversation.hh  creature.cc  (+140 more)
src/leibniz/: Makefile.am  Makefile.in  addactionwin.cc  addactionwin.hh  addobjectwin.cc  addobjectwin.hh  editorwin.cc  editorwin.hh  eventwin.cc  eventwin.hh  expandmapwin.cc  expandmapwin.hh  iconpropswin.cc  iconpropswin.hh  indoorssdleditor.cc  indoorssdleditor.hh  leibniz.cc  leibniz.hh  newmapwin.cc  newmapwin.hh  newworldwin.cc  newworldwin.hh  obj.cc  obj.hh  outdoorssdleditor.cc  outdoorssdleditor.hh  sdleditor.cc  sdleditor.hh  selectmapwin.cc  selectmapwin.hh  startupwin.cc  startupwin.hh  tabcontext.cc  tabcontext.hh
(+7 files in other folders)
